# 3D_Segmenter

./: .gitignore  CMakeLists.txt  README.md
inc/: PartLoader.h  Segmenter.h
src/: PartLoader.cpp  Segmenter.cpp
